# lockbox_Project

./: CMakeLists.txt  lock.cbp  skeleton
encryptor/: encryptor.h  encryptor.h.cbp
obfuscation/: obfuscation.cbp  obfuscation.depend  obfuscator.cpp  obfuscator.h
scripts/: setup.bat  setup.sh  setup_windows.ps1
src/: encryptor.cpp  encryptor.h  imgutils.cpp  imgutils.h  main.cpp  obfuscator.cpp  obfuscator.h  utils.cpp  utils.h
src/platform/: pwd.h  pwd_unix.cpp  pwd_win.cpp
utils/: utils.cbp
